--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -13,8 +13,9 @@ $clr-black: Black;
 
 
 /* colors - dark mode */
-$clr-primary-dk: #405066;
+$clr-primary-dk: #2E485B;
 $clr-secondary-dk: #6A93B0;
+$clr-border-dk: #405066;
 
 
 /* colors - accent */
